# healthycode

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: docs-ci.yml  e2e-tests.yml  pypi-release.yml  unit-tests.yml
grimoirelab_metrics/: cli.py  metrics.py
model/npm/: README.md
model/npm/data/: expert-classification.csv  metrics.json
model/npm/docs/: guideline-for-manual-classification.md
model/npm/notebooks/: phase1_metrics_cleaning.ipynb  phase2_prepare_key_metrics.ipynb  phase3_final_calculation.ipynb
src/grimoirelab_metrics/: cli.py  grimoirelab_client.py  metrics.py
tests/: run_tests.py
tests/data/: archived_repos.spdx.xml  duplicate_repo.spdx.xml  events.json  file_events.json  invalid_repo.spdx.xml  mercurial_repo.spdx.xml  missing_repo.spdx.xml  valid.spdx.xml
tests/end_to_end/: base.py  test_cli.py
tests/unit/: test_cli.py  test_metrics.py
